# epilog-print-api-release

./: JSON_SETTINGS.md  LICENSE.md  README.md  license_attribution.txt
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature_request.yml
cpp-library/: CMakeLists.txt  README.md  epilog-print-api.h
cpp-library/example/: epilogprintfilegenerator.cpp  epilogprintfilegenerator.h  main.cpp
cpp-library/win-x64/: epilog_print_api.dll.lib
epilog-print-api-runner/: README.md
epilog-print-file-transmitter/: README.md
epilog-print-file-transmitter/ubuntu-20.04/: epilog_print_file_transmitter
schema/: settings-processes-v1.x.schema.json
svg-json-examples/engrave-only/: Multi-Process-Raster-DPI.json
svg-json-examples/multi-process/: Multi-Process-Mixed.json
svg-json-examples/vector-only/: Multi-Process-Vector.json
